fixed sonar issues
fixed code smell
fixed bug